--- a/xxl-job-admin/templates/secret.yaml
+++ b/xxl-job-admin/templates/secret.yaml
@@ -6,11 +6,11 @@ metadata:
     {{- include "xxl-job-admin.labels" . | nindent 4 }}
 type: Opaque
 data:
-  mysql.url: {{ required "database.url is required" .Values.database.url | b64enc | quote }}
+  mysql.url: {{ required "database.url is required"  "xxl-job-admin.spring.datasource.url" | b64enc | quote }}
   {{- with .Values.database.user }}
   mysql.user: {{ . | b64enc | quote }}
   {{- end }}
   {{- with .Values.database.password }}
   mysql.password: {{ . | b64enc | quote }}
   {{- end }}
-  mysql.database: {{ required "database.db is required" .Values.database.db | b64enc | quote }}
+  mysql.database: {{ required "database.db is required" .Values.database.db_name | b64enc | quote }}
