--- a/charts/xxl-job-admin/Chart.yaml
+++ b/charts/xxl-job-admin/Chart.yaml
@@ -8,7 +8,7 @@ annotations:
       url: https://github.com/dellnoantechnp.github.io/tree/main/charts/xxl-job-admin
 apiVersion: v2
 appVersion: 2.3.1
-description: XXL-JOB-ADMIN is schedule center for XXL-JOB
+description: XXL-JOB-ADMIN is schedule center for XXL-JOB on Kubernetes.
 home: https://github.com/xuxueli/xxl-job/
 maintainers:
 - email: dellnoantechnp@gmail.com
@@ -18,4 +18,4 @@ name: xxl-job-admin
 sources:
 - https://github.com/dellnoantechnp.github.io/
 type: application
-version: 1.0.2
+version: 1.0.3
