--- a/charts/prometheusalert/Chart.yaml
+++ b/charts/prometheusalert/Chart.yaml
@@ -1,13 +1,21 @@
-apiVersion: v1
+annotations:
+  artifacthub.io/images: |
+    - name: feiyu563/prometheus-alert:latest
+      image: feiyu563/prometheus-alert:latest
+  artifacthub.io/links: |
+    - name: Chart Source
+      url: https://github.com/dellnoantechnp.github.io/tree/main/charts/xxl-job-admin
+apiVersion: v2
+appVersion: 4.8.2
 name: prometheusalert
 description: A Alert-Center for Prometheus Grafana and Graylog, alert message deliver to Wechat/Feishu/Lark/email/DingTalk/workWechat/webhook/telegram ...
 home: https://github.com/feiyu563/PrometheusAlert
-icon: https://raw.githubusercontent.com/feiyu563/PrometheusAlert/master/doc/logo.png
+icon: https://raw.githubusercontent.com/feiyu563/PrometheusAlert/master/doc/images/logo.png
 maintainers:
 - email: dellnoantechnp@gmail.com
   name: dellnoantechnp
+  url: https://github.com/dellnoantechnp
 sources:
 - https://github.com/feiyu563/PrometheusAlert
 type: application
-version: 1.0.1
-appVersion: 4.8.2
+version: 1.0.2
