--- a/charts/prometheusalert/templates/configmap.yaml
+++ b/charts/prometheusalert/templates/configmap.yaml
@@ -5,4 +5,17 @@ metadata:
 {{ include "prometheusalert.labels" . | indent 4 }}
   name: {{ template "prometheusalert.fullname" . }}
 data:
-{{ (.Files.Glob "config/*").AsConfig | indent 2 }}
+{{- if .Values.config.app_conf }}
+  app.conf: |
+{{ .Values.config.app_conf | indent 4 }}
+{{- end -}}
+
+{{- if .Values.config.init_sql }}
+  init.sql: |
+{{ .Values.config.init_sql | indent 4 }}
+{{- end -}}
+
+{{- if .Values.config.user_csv }}
+  user.csv: |
+{{ .Values.config.user_csv | indent 4 }}
+{{- end -}}
