--- a/charts/canal-server/values.yaml
+++ b/charts/canal-server/values.yaml
@@ -5,16 +5,52 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/dellnoantechnp/canal-server
-  pullPolicy: IfNotPresent
+  registry: ghcr.io
+  repository: dellnoantechnp/canal-server
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v0.0.1"
+  ## Specify a imagePullPolicy
+  ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
+  ## ref: https://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+  ##
+  pullPolicy: IfNotPresent
+  ## Optionally specify an array of imagePullSecrets.
+  ## Secrets must be manually created in the namespace.
+  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+  ## e.g:
+  ## pullSecrets:
+  ##   - myRegistryKeySecretName
+  ##
+  pullSecrets: []
 
-imagePullSecrets: []
+## @param nameOverride String to partially override common.names.fullname template (will maintain the release name)
+##
 nameOverride: ""
+## @param fullnameOverride String to fully override common.names.fullname template
+##
 fullnameOverride: ""
 
+## @param containerPorts.canal; container port to open for canal-server
+## @param containerPorts.admin; container port to open for canal-server admin
+## @param containerPorts.metrics; container port to open for canal-server metrics
+##
+containerPorts:
+  canal: 11111
+  admin: 11110
+  metrics: 11112
 
+service:
+  ## @param service.type canal-server; service type
+  ##
+  type: ClusterIP
+  ## @param service.ports.canal; Canal-server service port
+  ## @param service.ports.admin; admin service port
+  ## @param service.ports.metrics; metrics service port
+  ##
+  ports:
+    canal: 11111
+    admin: 11110
+    metrics: 11112
 
 ## configure the canal-server detail
 ServerConf:
@@ -26,10 +62,10 @@ ServerConf:
   heapSize: 1024
   ## @param canalPortNumber specify canal-server listen tcp port number, for canal-client.
   ##
-  canalPortNumber: 11111
+  canalPortNumber: "{{ .Values.containerPorts.canal }}"
   ## @param canalAdminPortNumber specify canal-server admin tcp port number, for canal-admin.
   ##
-  canalAdminPortNumber: 11110
+  canalAdminPortNumber: "{{ .Values.containerPorts.admin }}"
   ## @param canalAdminUser specify canal-server admin account username.
   ##
   canalAdminUser: admin
@@ -38,7 +74,7 @@ ServerConf:
   canalAdminCiphertextPassword: admin
   ## @param canalMetricsPortNumber specify canal-server metrics tcp port number, for prometheus.
   ##
-  canalMetricsPortNumber: 11112
+  canalMetricsPortNumber: "{{ .Values.containerPorts.metrics }}"
   ## @param canalServerMode specify canal server-mode, eg. tcp, kafka, rocketMQ, rabbitMQ, pulsarMQ
   ## 
   canalServerMode: tcp
@@ -68,6 +104,47 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+## @param extraEnvVars Extra environment variables to be set on canal-server container
+## e.g:
+## extraEnvVars:
+##   - name: FOO
+##     value: "bar"
+##
+extraEnvVars: []
+## @param extraEnvVarsCM ConfigMap with extra environment variables
+##
+extraEnvVarsCM: ""
+## @param extraEnvVarsSecret Secret with extra environment variables
+##
+extraEnvVarsSecret: ""
+
+## @param command Default container command (useful when using custom images). Use array form
+##
+command: []
+## @param args Default container args (useful when using custom images). Use array form
+##
+args: []
+
+podAnnotations: {}
+
+## Canal-server pod Security Context
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
+## @param podSecurityContext.enabled Enable pod Security Context
+## @param podSecurityContext.fsGroup Group ID for the container
+##
+podSecurityContext:
+  enabled: false
+  fsGroup: 1001
+
+securityContext: {}
+  # capabilities:
+  #   drop:
+  #   - ALL
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+# runAsUser: 1000
+
+## @section canal-server; deployment/statefulset parameters
 config:
   canal: |
     # tcp bind ip
@@ -259,22 +336,6 @@ config:
     pulsarmq.roleToken=
     pulsarmq.topicTenantPrefix=
 
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
 
 ingress:
   enabled: false
@@ -283,7 +344,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: canal.example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
@@ -292,17 +353,109 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+## @param hostAliases canal-server; pod host aliases
+## https://kubernetes.io/docs/concepts/services-networking/add-entries-to-pod-etc-hosts-with-host-aliases/
+##
+hostAliases: []
+
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  ## Example:
+  ## limits:
+  ##    cpu: 250m
+  ##    memory: 256Mi
+  limits: {}
+  ## Examples:
+  ## requests:
+  ##    cpu: 250m
+  ##    memory: 256Mi
+  requests: {}
+  ##  cpu: 250m
+  ##  memory: 256Mi
+
+## Configure extra options for liveness probe
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
+## @param livenessProbe.enabled Enable livenessProbe
+## @param livenessProbe.initialDelaySeconds Initial delay seconds for livenessProbe
+## @param livenessProbe.periodSeconds Period seconds for livenessProbe
+## @param livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+## @param livenessProbe.failureThreshold Failure threshold for livenessProbe
+## @param livenessProbe.successThreshold Success threshold for livenessProbe
+##
+livenessProbe:
+  enabled: true
+  initialDelaySeconds: 10
+  periodSeconds: 5
+  timeoutSeconds: 5
+  successThreshold: 1
+  failureThreshold: 5
+## Configure extra options for readiness probe
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
+## @param readinessProbe.enabled Enable readinessProbe
+## @param readinessProbe.initialDelaySeconds Initial delay seconds for readinessProbe
+## @param readinessProbe.periodSeconds Period seconds for readinessProbe
+## @param readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+## @param readinessProbe.failureThreshold Failure threshold for readinessProbe
+## @param readinessProbe.successThreshold Success threshold for readinessProbe
+##
+readinessProbe:
+  enabled: true
+  initialDelaySeconds: 10
+  periodSeconds: 5
+  timeoutSeconds: 1
+  successThreshold: 1
+  failureThreshold: 5
+## Configure extra options for startupProbe probe
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
+## @param startupProbe.enabled Enable startupProbe
+## @param startupProbe.initialDelaySeconds Initial delay seconds for startupProbe
+## @param startupProbe.periodSeconds Period seconds for startupProbe
+## @param startupProbe.timeoutSeconds Timeout seconds for startupProbe
+## @param startupProbe.failureThreshold Failure threshold for startupProbe
+## @param startupProbe.successThreshold Success threshold for startupProbe
+##
+startupProbe:
+  enabled: false
+  initialDelaySeconds: 0
+  periodSeconds: 10
+  timeoutSeconds: 5
+  successThreshold: 1
+  failureThreshold: 60
+## @param customLivenessProbe Override default liveness probe
+##
+customLivenessProbe: {}
+## @param customReadinessProbe Override default readiness probe
+##
+customReadinessProbe: {}
+## @param customStartupProbe Override default startup probe
+##
+customStartupProbe: {}
+
+## @param initContainers Add additional init containers to the Canal-server; pods
+## e.g:
+## initContainers:
+##   - name: your-image-name
+##     image: your-image
+##     imagePullPolicy: Always
+##     ports:
+##       - name: portname
+##         containerPort: 1234
+##
+initContainers: []
+## @param sidecars Add additional sidecar containers to the Canal-server; pods
+## e.g:
+## sidecars:
+##   - name: your-image-name
+##     image: your-image
+##     imagePullPolicy: Always
+##     ports:
+##       - name: portname
+##         containerPort: 1234
+##
+sidecars: []
 
 autoscaling:
   enabled: false
