bugfix: modify volumes load config.
update prometheus-fs alert template.
update prometheusAlert Chart init.sql
update feishu/lark alert template.
[ci skip]

--- a/charts/canal-server/templates/service.yaml
+++ b/charts/canal-server/templates/service.yaml
@@ -7,15 +7,15 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.canal }}
+    - port: {{ .Values.service.ports.canal }}
       targetPort: tcp-canal
       protocol: TCP
       name: tcp-canal
-    - port: {{ .Values.service.admin }}
+    - port: {{ .Values.service.ports.admin }}
       targetPort: tcp-admin
       protocol: TCP
       name: tcp-admin
-    - port: {{ .Values.service.metrics }}
+    - port: {{ .Values.service.ports.metrics }}
       targetPort: http-metrics
       protocol: TCP
       name: http-metrics
