feature: add Bitnami/common-1.10.3 chart, dependency for kafka. add Bitnami/zookeeper-7.6.1 chart, dependency for kafka. add Bitnami/kafka 2.8.1 AppVersion.
the last kafka-14.9.3 use Kafka appVersion 2.8.1.
Source from Bitnami/charts.

--- a/charts/kafka/Chart.yaml
+++ b/charts/kafka/Chart.yaml
@@ -4,13 +4,13 @@ apiVersion: v2
 appVersion: 2.8.1
 dependencies:
   - name: common
-    repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
+    repository: https://charts.bitnami.com/bitnami
     tags:
       - bitnami-common
     version: 1.x.x
   - condition: zookeeper.enabled
     name: zookeeper
-    repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
+    repository: https://charts.bitnami.com/bitnami
     version: 7.x.x
 description: "[OpenSource by Bitnami] Apache Kafka is a distributed streaming platform."
 engine: gotpl
