feature: add Bitnami/common-1.10.3 chart, dependency for kafka. add Bitnami/zookeeper-7.6.1 chart, dependency for kafka. add Bitnami/kafka 2.8.1 AppVersion.
the last kafka-14.9.3 use Kafka appVersion 2.8.1.
Source from Bitnami/charts.

--- a/charts/kafka/charts/zookeeper/Chart.yaml
+++ b/charts/kafka/charts/zookeeper/Chart.yaml
@@ -4,7 +4,7 @@ apiVersion: v2
 appVersion: 3.7.0
 dependencies:
   - name: common
-    repository: https://charts.bitnami.com/bitnami
+    repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
     tags:
       - bitnami-common
     version: 1.x.x
