feature: add Bitnami/common-1.10.3 chart, dependency for kafka. add Bitnami/zookeeper-7.6.1 chart, dependency for kafka. add Bitnami/kafka 2.8.1 AppVersion.
the last kafka-14.9.3 use Kafka appVersion 2.8.1.
Source from Bitnami/charts.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    stepzookeepers:
+    steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
