--- a/charts/kafka/Chart.yaml
+++ b/charts/kafka/Chart.yaml
@@ -15,7 +15,7 @@ dependencies:
 description: "[OpenSource by Bitnami] Apache Kafka is a distributed streaming platform."
 engine: gotpl
 home: https://github.com/bitnami/charts/tree/master/bitnami/kafka
-icon: https://bitnami.com/assets/stacks/kafka/img/kafka-stack-220x234.png
+icon: https://raw.githubusercontent.com/dellnoantechnp/helm-chart-xxl-job-admin/main/assets/stacks/kafka/img/kafka-stack-220x234.png
 keywords:
   - kafka
   - zookeeper
