--- a/charts/zookeeper/Chart.yaml
+++ b/charts/zookeeper/Chart.yaml
@@ -11,7 +11,7 @@ dependencies:
 description: "[OpenSource by Bitnami] A centralized service for maintaining configuration information, naming, providing distributed synchronization, and providing group services for distributed applications."
 engine: gotpl
 home: https://github.com/bitnami/charts/tree/master/bitnami/zookeeper
-icon: https://bitnami.com/assets/stacks/zookeeper/img/zookeeper-stack-220x234.png
+icon: https://raw.githubusercontent.com/dellnoantechnp/helm-chart-xxl-job-admin/main/assets/stacks/zookeeper/img/zookeeper-stack-110x117.png
 keywords:
   - zookeeper
 maintainers:
