--- a/charts/canal-server/templates/configmap.yaml
+++ b/charts/canal-server/templates/configmap.yaml
@@ -4,7 +4,10 @@ kind: ConfigMap
 metadata:
   name: {{ $canalServerCmName }}
 data:
-{{- range .Values.InstanceConf.canal.instance }}
-  example: |
-{{ include "instance.configmap.tpl" . | indent 4 -}}
+{{- range $key, $values := .Values.InstanceConf.canal.instance }}
+{{- $_ := set $ "item" $values }}
+  {{ $values.name }}-instance.properties: |
+{{- tpl ($.Files.Get "configs/instance.properties") $ | indent 4 }}
 {{- end }}
+  canal.properties: |
+{{ tpl ($.Files.Get "configs/canal.properties") $ | indent 4 }}
