update: canal-server application add deployment. [ci skip]

--- a/charts/canal-server/configs/canal.properties
+++ b/charts/canal-server/configs/canal.properties
@@ -22,7 +22,7 @@ canal.admin.passwd=${CANAL_ADMIN_CIPHERTEXT_PASSWORD:4ACFE3202A5FF5CF467898FC58A
 #canal.admin.register.auto = true
 #canal.admin.register.cluster =
 #canal.admin.register.name =
-canal.zkServers=
+canal.zkServers={{- include "zkServers" . }}
 
 # flush data to zk
 canal.zookeeper.flush.period=1000
