chore: update canal-server application.
release version 0.0.2.

--- a/charts/canal-server/configs/canal.properties
+++ b/charts/canal-server/configs/canal.properties
@@ -86,13 +86,17 @@ canal.instance.get.ddl.isolation=false
 canal.instance.parser.parallel=true
 
 ## concurrent thread number, default 60% available processors, suggest not to exceed Runtime.getRuntime().availableProcessors()
+{{- if .Values.ServerConf.instanceParserParallelThreadSize }}
+canal.instance.parser.parallelThreadSize = {{ .Values.ServerConf.instanceParserParallelThreadSize }}
+{{- else }}
 #canal.instance.parser.parallelThreadSize = 16
+{{- end }}
 
 ## disruptor ringbuffer size, must be power of 2
 canal.instance.parser.parallelBufferSize=256
 
 # table meta tsdb info
-canal.instance.tsdb.enable={{ .Values.TsdbDBConf.enabled }}
+canal.instance.tsdb.enable={{ .Values.TsdbDBConf.enabled | default "false" }}
 canal.instance.tsdb.dir=${canal.file.data.dir:../conf}/${canal.instance.destination:}
 {{- if .Values.TsdbDBConf.enabled }}
 canal.instance.tsdb.url=jdbc:mysql://{{ .Values.TsdbDBConf.canal_tsdb_mysql_address }}:{{ .Values.TsdbDBConf.canal_tsdb_mysql_port }}/{{ .Values.TsdbDBConf.canal_tsdb_db_name }}?characterEncoding=utf-8&autoReconnect=true&rewriteBatchedStatements=true&serverTimezone=UTC
@@ -124,15 +128,21 @@ canal.auto.scan.interval=5
 
 # set this value to 'true' means that when binlog pos not found, skip to latest.
 # WARN: pls keep 'false' in production env, or if you know what you want.
-canal.auto.reset.latest.pos.mode=false
-#canal.instance.tsdb.spring.xml = classpath:spring/tsdb/h2-tsdb.xml
+canal.auto.reset.latest.pos.mode={{ .Values.ServerConf.autoResetLatestPosMode | default "false" }}
+{{- if .Values.TsdbDBConf.enabled }}
 canal.instance.tsdb.spring.xml=classpath:spring/tsdb/mysql-tsdb.xml
+{{- else }}
+canal.instance.tsdb.spring.xml = classpath:spring/tsdb/h2-tsdb.xml
+{{- end }}
 canal.instance.global.mode=spring
 canal.instance.global.lazy=false
 canal.instance.global.manager.address=${canal.admin.manager}
-#canal.instance.global.spring.xml = classpath:spring/memory-instance.xml
+{{- if  include "zkServers" . }}
+canal.instance.global.spring.xml = classpath:spring/default-instance.xml
+{{- else }}
 canal.instance.global.spring.xml=classpath:spring/file-instance.xml
-#canal.instance.global.spring.xml = classpath:spring/default-instance.xml
+{{- end }}
+#canal.instance.global.spring.xml = classpath:spring/memory-instance.xml
 
 ##################################################
 #########         MQ Properties      #############
