--- a/charts/canal-server/Chart.yaml
+++ b/charts/canal-server/Chart.yaml
@@ -25,7 +25,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.2
+version: 0.0.3
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -37,3 +37,6 @@ dependencies:
     version: 7.x.x
     condition: zookeeper.enabled
     repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
+  - name: common
+    repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
+    version: 1.x.x
