--- a/charts/canal-server/templates/service.yaml
+++ b/charts/canal-server/templates/service.yaml
@@ -14,14 +14,14 @@ spec:
       {{- if and (contains .Values.service.type "NodePort") (typeIs "int" .Values.service.ports.canal.nodePort) }}
       nodePort: {{ .Values.service.ports.canal.nodePort }}
       {{- end }}
-    - port: {{ .Values.service.ports.admin }}
+    - port: {{ .Values.service.ports.admin.port }}
       targetPort: tcp-admin
       protocol: TCP
       name: tcp-admin
       {{- if and (contains .Values.service.type "NodePort") (typeIs "int" .Values.service.ports.admin.nodePort) }}
       nodePort: {{ .Values.service.ports.admin.nodePort }}
       {{- end }}
-    - port: {{ .Values.service.ports.metrics }}
+    - port: {{ .Values.service.ports.metrics.port }}
       targetPort: http-metrics
       protocol: TCP
       name: http-metrics
