--- a/charts/canal-server/templates/statefulset.yaml
+++ b/charts/canal-server/templates/statefulset.yaml
@@ -113,7 +113,7 @@ spec:
                   apiVersion: v1
                   fieldPath: status.podIP
             - name: CANAL_HEAP_SIZE
-              value: {{ .Values.ServerConf.heapSize }}
+              value: {{ .Values.ServerConf.heapSize | quote }}
             {{- if .Values.extraEnvVars }}
             {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 12 }}
             {{- end }}
