--- a/charts/canal-server/templates/statefulset.yaml
+++ b/charts/canal-server/templates/statefulset.yaml
@@ -114,6 +114,8 @@ spec:
                   fieldPath: status.podIP
             - name: CANAL_HEAP_SIZE
               value: {{ .Values.ServerConf.heapSize | quote }}
+            - name: ENV_DESTINATIONS
+              value: {{ include "canal.destinations" . }}
             {{- if .Values.extraEnvVars }}
             {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 12 }}
             {{- end }}
