chore: update canal-server application.
release version 0.1.0

--- a/charts/canal-server/configs/canal.properties
+++ b/charts/canal-server/configs/canal.properties
@@ -32,7 +32,7 @@ canal.withoutNetty=false
 canal.serverMode=tcp
 
 # flush meta cursor/parse position to file
-canal.file.data.dir=${canal.conf.dir}
+canal.file.data.dir=/data
 canal.file.flush.period=1000
 
 ## memory store RingBuffer size, should be Math.pow(2,n)
