--- a/charts/canal-server/Chart.yaml
+++ b/charts/canal-server/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
 name: canal-server
-description: Canal Server is capable of parsing MySQL binlog and subscribe to the data change, while Canal Client can be implemented to broadcast the change to anywhere, e.g. database and Apache Kafka.
+description: Canal Server is capable of parsing MySQL binlog and subscribe to the data change, while Canal Client can be implemented to broadcast the change to anywhere, 
+  e.g. database and Apache Kafka.
 home: https://github.com/alibaba/canal/wiki
 annotations:
   ghcr.io/packages: |
@@ -25,12 +26,13 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.5
+version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
+icon: https://raw.githubusercontent.com/dellnoantechnp/helm-chart-xxl-job-admin/main/assets/stacks/canal/img/canal-75x80.png
 appVersion: "1.1.6"
 dependencies:
   - name: zookeeper
