--- a/charts/canal-server/templates/statefulset.yaml
+++ b/charts/canal-server/templates/statefulset.yaml
@@ -1,7 +1,9 @@
+{{- $zk_address := include "zkServer.address" . }}
+{{- $zk_port := include "zkServer.port" . }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ include "canal-server.name" . }}
+  name: {{ include "canal-server.fullname" . }}
   labels:
     {{- include "canal-server.labels" . | nindent 4 }}
 spec:
@@ -11,6 +13,7 @@ spec:
   selector:
     matchLabels:
       {{- include "canal-server.selectorLabels" . | nindent 6 }}
+  serviceName: {{ template "canal-server.fullname" . }}-headless
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -28,27 +31,46 @@ spec:
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
-      {{- if .Values.initContainers }}
+      {{- if (include "zkServers" .) }}
       initContainers:
         {{- if .Values.initContainers }}
         {{- include "common.tplvalues.render" (dict "value" .Values.initContainers "context" $) | nindent 8 }}
         {{- end }}
+        {{- if (include "zkServers" .) }}
+        - name: wait-for-zookeeper
+          image: docker.io/bitnami/zookeeper:3.7.0-debian-10-r257
+          imagePullPolicy: Always
+          command: [ "/bin/bash", "-c", 'echo "ruok" | timeout 2 nc -w 2 {{ $zk_address}} {{ $zk_port }} | grep imok' ]
+        {{- else }}
+        - name: test
+          image: test:latest
+          command: []
+        {{ end }}
         {{- if and .Values.volumePermissions.enabled .Values.persistence.enabled }}
         - name: volume-permissions
-          image: {{ template "minio.volumePermissions.image" . }}
+          image: {{ template "canal-server.volumePermissions.image" . }}
           imagePullPolicy: {{ default "" .Values.volumePermissions.image.pullPolicy | quote }}
           command:
-            - /bin/bash
-            - -ec
-            - |
-              chown -R {{ .Values.containerSecurityContext.runAsUser }}:{{ .Values.podSecurityContext.fsGroup }} {{ .Values.persistence.mountPath }}
-          securityContext: {{- .Values.volumePermissions.containerSecurityContext | toYaml | nindent 12 }}
+            - chown
+          args:
+            - -R
+            - {{ .Values.containerSecurityContext.runAsUser }}:{{ .Values.podSecurityContext.fsGroup }}
+            - /bitnami/zookeeper
+            {{- if .Values.dataLogDir }}
+            - {{ .Values.dataLogDir }}
+            {{- end }}
+          securityContext:
+            runAsUser: {{- .Values.volumePermissions.containerSecurityContext | toYaml | nindent 12 }}
           {{- if .Values.volumePermissions.resources }}
           resources: {{- toYaml .Values.volumePermissions.resources | nindent 12 }}
           {{- end }}
           volumeMounts:
             - name: data
-              mountPath: {{ .Values.persistence.mountPath }}
+              mountPath: /bitnami/zookeeper
+            {{- if .Values.dataLogDir }}
+            - name: data-log
+              mountPath: {{ .Values.dataLogDir }}
+            {{- end }}
         {{- end }}
       {{- end }}
       containers:
@@ -146,7 +168,42 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.sidecars }}
+      {{- include "common.tplvalues.render" (dict "value" .Values.sidecars "context" $) | nindent 8 }}
+      {{- end }}
       volumes:
         - name: config
           configMap:
             name: {{ include "canal.server.configmap.fullname" . }}
+{{- if (empty (include "zkServers" .)) }}
+{{- if not .Values.persistence.enabled }}
+        - name: data
+          emptyDir: {}
+{{- else if .Values.persistence.existingClaim }}
+        - name: data
+          persistentVolumeClaim:
+            claimName: {{ printf "%s" (tpl .Values.persistence.existingClaim .) }}
+{{- end }}
+  {{- if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
+  volumeClaimTemplates:
+  {{- end }}
+{{- if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
+    - metadata:
+        name: data
+        {{- if .Values.persistence.annotations }}
+        annotations: {{- include "common.tplvalues.render" (dict "value" .Values.persistence.annotations "context" $) | nindent 10 }}
+        {{- end }}
+      spec:
+        accessModes:
+        {{- range .Values.persistence.accessModes }}
+          - {{ . | quote }}
+        {{- end }}
+        resources:
+          requests:
+            storage: {{ .Values.persistence.size | quote }}
+        {{- include "canal-server.storageClass" . | nindent 8 }}
+        {{- if .Values.persistence.selector }}
+        selector: {{- include "common.tplvalues.render" (dict "value" .Values.persistence.selector "context" $) | nindent 10 }}
+        {{- end -}}
+{{- end }}
+{{- end }}
