chore: update some details.
release version 0.1.1

--- a/charts/canal-server/configs/instance.properties
+++ b/charts/canal-server/configs/instance.properties
@@ -1,6 +1,6 @@
 #################################################
 ## mysql serverId , v1.0.26+ will autoGen
-{{- if not .item.mysql.slaveId.autoGenerate }}
+{{- if .item.mysql.slaveId.autoGenerate }}
 #canal.instance.mysql.slaveId=
 {{- else }}
 canal.instance.mysql.slaveId={{ .item.mysql.slaveId.number }}
@@ -8,7 +8,7 @@ canal.instance.mysql.slaveId={{ .item.mysql.slaveId.number }}
 # enable gtid use true/false
 canal.instance.gtidon={{ .item.gtidon }}
 # position info
-canal.instance.master.address={{ .item.master.address }}
+canal.instance.master.address={{ .item.master.address }}:{{ .item.master.port }}
 canal.instance.master.journal.name={{ .item.master.journalName }}
 canal.instance.master.position={{ .item.master.position }}
 canal.instance.master.timestamp={{ .item.master.timestamp }}
